Commita layouten för hemsidan
Jag satte upp en grundläggande layout för hemsidan, la till en huvudrubrik i min header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bookbuddies bokhandel</title>
+    <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    
+    <div id="Wrapper">
+
+        <header><h1>Bookbuddies bokhandel</h1></header>
+        <nav></nav>
+        <section id="sc1"></section>
+        <section id="sc2"></section>
+        <section id="sc3"></section>
+        <section id="sc4"></section>
+        <footer></footer>
+
+
+
+
+    </div>
+
+
+
 </body>
 </html>
