--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 
     <section class="sc9">
         <div class="huvud-content">
-            <h2>Välkommen till Bookbuddies Bokhandel</h2>
-            <p>Vi erbjuder ett brett utbud av böcker för alla åldrar och smaker. Utforska vårt sortiment och hitta din nästa favoritbok!</p>
+            <h2>Welcome to Bookbuddies Bookstore</h2>
+            <p>We offer a wide range of books for all ages and tastes. Explore our range and find your next favorite book!</p>
         </div>
     </section>
 
@@ -33,26 +33,26 @@
             <h2>OUR TEAM!</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="" alt="arbetare 1">
+                    <img src="/img/istockphoto-1398385367-612x612.jpg" alt="arbetare 1">
 
                     <h3>Anna Andersson</h3>
-                    <p>VD</p>
+                    <p>CEO</p>
                 </div>
                 <div class="team-member">
-                    <img src="" alt="Arbetare 2">
+                    <img src="/img/istockphoto-1335941248-612x612.jpg" alt="Arbetare 2">
                     <h3>Björn Berg</h3>
-                    <p>Butikschef</p>
+                    <p>Store manager</p>
                 </div>
                 <div class="team-member">
-                    <img src="" alt="Arbetare 3">
+                    <img src="/img/istockphoto-1387613096-612x612.jpg" alt="Arbetare 3">
                     <h3>Cecilia Carlsson</h3>
-                    <p>marknadsföringsansvarig</p>
+                    <p>Marketing manager</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class ="ft2">
+    <footer class ="ft">
         <p>Copyright &copy; 2024 All rights reserved by Bookbuddies</p>
     </footer>
 
