--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
            
         <section id="sc8"><a href="">Barnböcker</a></section>
        
-        <footer></footer>
+        <footer class="ft">
+            <p>Copyright &copy; 2024 All rights reserved by Bookbuddies</p>
+        </footer>
 
 
 
