--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
 
 <div id="Wrapper2">
 
-    <header class="hd-about-us">
+    <header>
         <h1>Bookbuddies Bokhandel</h1>
     </header>
 
-    <nav class ="nv">
+    <nav>
         <a href="/index.html">Home</a>
         <a href="/about.html">About us</a>
         <a href="">Contact us</a>
