--- a/skonlitteratur.html
+++ b/skonlitteratur.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fiction - Book buddies</title>
+    <title>Fiction - Bookbuddies</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
     <div id="Wrapper3">
 
-        <header><h1>Bookbuddies Bokhandel</h1></header>
+        <header><h1>Bookbuddies Bookstore</h1></header>
         
         <nav>
             <a href="/index.html" class="a">Home</a>
@@ -28,7 +28,7 @@
 
         <section id="sc11">
             <div class="bok-content">
-                <img src="img/ringens-brodraskap (1).jpg" alt="">
+                <img src="img/ringens-brodraskap (1).jpg" alt="bild på ringens-brodraskap">
                 <h2 class="price">Price : 250 kr</h2>
                 <button class="buy-button">Buy</button>
             </div>
@@ -36,29 +36,60 @@
 
         <section id="sc12">
             <div class="bok-content">
-                <img src="img/silmarillion.jpg" alt="">
-                <h2 class="price">Price : 250 kr</h2>
+                <img src="img/silmarillion.jpg" alt="bild på silmarillion">
+                <h2 class="price">Price : 299 kr</h2>
                 <button class="buy-button">Buy</button>
             </div>
         </section>
 
         <section id="sc13">
             <div class="bok-content">
-                <img src="img/viva-espana.jpg" alt="">
-                <h2 class="price">Price : 250 kr</h2>
+                <img src="img/viva-espana.jpg" alt="bild på viva-espana">
+                <h2 class="price">Price : 199 kr</h2>
                 <button class="buy-button">Buy</button>
             </div>
         </section>
 
         <section id="sc14">
             <div class="bok-content">
-                <img src="img/hobbiten-eller-bort-och-hem-igen.jpg" alt="">
+                <img src="img/hobbiten-eller-bort-och-hem-igen.jpg" alt="bild på hobbiten-eller-bort-och-hem-igen">
                 <h2 class="price">Price : 250 kr</h2>
                 <button class="buy-button">Buy</button>
             </div>
         </section>
 
+        <section id="sc15">
+            <div class="bok-content">
+                <img src="img/odet-och-hoppet.jpg" alt="bild på odet-och-hoppet">
+                <h2 class="price">Price : 350 kr</h2>
+                <button class="buy-button">Buy</button>
+            </div>
+        </section>
 
+        <section id="sc16">
+            <div class="bok-content">
+                <img src="img/1_manskensryttaren_mandrakarna_LR.jpg" alt="bild på 1_manskensryttaren_mandrakarna_LR">
+                <h2 class="price">Price : 99 kr</h2>
+                <button class="buy-button">Buy</button>
+            </div>
+        </section>
+
+
+        <section id="sc17">
+            <div class="bok-content">
+                <img src="img/medan-vi-brinner.jpg" alt="bild på medan-vi-brinner">
+                <h2 class="price">Price : 400 kr</h2>
+                <button class="buy-button">Buy</button>
+            </div>
+        </section>
+
+        <section id="sc18">
+            <div class="bok-content">
+                <img src="img/hafu.jpg" alt="bild på hafu">
+                <h2 class="price">Price : 300 kr</h2>
+                <button class="buy-button">Buy</button>
+            </div>
+        </section>
 
 
         <footer class="ft">
