--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Bookbuddies Bokhandel</title>
+    <title>About Us - Bookbuddies Bookstore</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <div id="Wrapper2">
 
     <header>
-        <h1>Bookbuddies Bokhandel</h1>
+        <h1>Bookbuddies Bookstore</h1>
     </header>
 
     <nav>
